--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -235,9 +235,11 @@
     width: 100%;
     padding: 20px;
     display: grid;
+    /*
     grid-template-columns: 2fr 1fr;
+    */
     grid-gap: 30px;
-    /* margin-top: 10px; */
+
 }
 
 .details .recentOrders {
